fixing animation issues on iOS Chrome

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -99,12 +99,15 @@
       -webkit-transform: rotate(45deg);
       transform: rotate(45deg);
       margin: -10px;
+      -webkit-animation: animate 2s infinite;
       animation: animate 2s infinite;
     }
     span:nth-child(2) {
+      -webkit-animation-delay: -0.2s;
       animation-delay: -0.2s;
     }
     span:nth-child(3) {
+      -webkit-animation-delay: -0.4s;
       animation-delay: -0.4s;
     }
   }
